--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,13 +2,12 @@
   "manifest_version": 2,
   "name": "SANobserver",
   "description": "",
-  "version": "1.1",
+  "version": "1.2",
   "author": "Iurii Zatcepin",
   "browser_action": {
     "default_icon": "icon.png",
     "default_title": "SAN Observer",
-    "default_popup": "popup.html"
+    "default_popup": "index.html"
   },
-  "content_security_policy":"script-src 'self' https://unpkg.com/apollo-client-browser@1.9.0; object-src 'self'",
   "permissions": ["activeTab"]
 }
