--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@santiment-network/ui": "^0.1.1",
+    "@santiment-network/ui": "0.3.2",
     "apollo-boost": "^0.1.22",
     "graphql": "^14.0.2",
     "moment": "^2.22.2",
