--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,12 +2,12 @@
   "manifest_version": 2,
   "name": "SANobserver",
   "description": "",
-  "version": "1.2",
+  "version": "1.3",
   "author": "Iurii Zatcepin",
   "browser_action": {
     "default_icon": "icon.png",
     "default_title": "SAN Observer",
     "default_popup": "index.html"
   },
-  "permissions": ["activeTab"]
+  "permissions": []
 }
